# risp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.cargo/: config.toml
.cursor/rules/: risp-project.mdc  settings-layers.mdc
examples/: adt_smoke.rsp  arith_arity.rsp  array_sum.rsp  borrow_field.rsp  borrow_ptr.rsp  box_i32.rsp  box_move.rsp  cast.rsp  cmp_f64.rsp  cmp_i64.rsp  enum_opt.rsp  extern_abs.rsp  generics_id.rsp  hello.rsp  import_math.rsp  list_box.rsp  loop_break.rsp  macro_when.rsp  math.rsp  ownership_move.rsp  print_values.rsp  rc_share.rsp  ref_param.rsp  set_bang.rsp  short_circuit.rsp  str_concat.rsp  struct_point.rsp  struct_str.rsp  tco_sum.rsp  trait_show.rsp  vec_sum.rsp  weak_cycle.rsp  while_sum.rsp
examples/errors/: array_in_sig.rsp  bad_adt_field.rsp  bad_cast.rsp  bad_extern_abi.rsp  break_outside.rsp  const_not_literal.rsp  duplicate_fn.rsp  generic_bound.rsp  import_missing.rsp  int_overflow.rsp  macro_arity.rsp  match_missing_binding.rsp  match_non_exhaustive.rsp  missing_impl.rsp  parse_missing_colon.rsp  ref_return.rsp  set_const.rsp  set_undefined.rsp  type_mismatch.rsp  undefined_var.rsp  unknown_field.rsp  unterminated_string.rsp  use_after_move.rsp  while_cond_type.rsp
runtime/: risp_rt.c  risp_rt.h
src/: ast.rs  codegen.rs  diagnostic.rs  lexer.rs  macroexpand.rs  main.rs  parser.rs  repl.rs  resolve.rs  typeck.rs
tests/: examples.rs  repl.rs
